// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty form 1`] = `
Array [
  "Enter a project name",
  "Select a country",
  "Select one or more regions",
  "Tell us all the locations that you'll be running your project in",
  "Enter a postcode",
  "Tell us what you would like to do",
  "Tell us how your project involves your community",
  "Tell us how your idea fits in with other local activities",
  "Enter the full legal name of the organisation",
  "Select yes or no.",
  "Enter a full UK address",
  "Select a type of organisation",
  "Enter first and last name",
  "Enter an email address",
  "Check this box to show you understand",
  "Select an option",
  "Select the specific group(s) of people your leadership identifies in",
]
`;

exports[`invalid form 1`] = `
Array [
  "Enter a project name",
  "Select a country",
  "Select a location",
  "Tell us all the locations that you'll be running your project in",
  "Enter a postcode",
  "The amount you ask for must be more than £10,000. If you need less than this,  <a href=\\"/funding/under10k\\">you can apply for under £10,000 here</a>.",
  "Select a project length",
  "Tell us what you would like to do",
  "Tell us how your project involves your community",
  "Tell us how your idea fits in with other local activities",
  "Select yes or no.",
  "Enter a full UK address",
  "Select a type of organisation",
  "Enter first and last name",
  "Enter an email address",
  "Check this box to show you understand",
  "Select an option",
  "Select the specific group(s) of people your leadership identifies in",
]
`;
